--- a/Projekat/WebP/WebContent/WEB-INF/web.xml
+++ b/Projekat/WebP/WebContent/WEB-INF/web.xml
@@ -104,4 +104,14 @@
     <servlet-name>RatingServlet</servlet-name>
     <url-pattern>/RatingServlet</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>CommentServlet</display-name>
+    <servlet-name>CommentServlet</servlet-name>
+    <servlet-class>yt.CommentServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CommentServlet</servlet-name>
+    <url-pattern>/CommentServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
