--- a/Projekat/WebP/WebContent/WEB-INF/web.xml
+++ b/Projekat/WebP/WebContent/WEB-INF/web.xml
@@ -14,6 +14,9 @@
     <servlet-name>LoginServlet</servlet-name>
     <url-pattern>/LoginServlet</url-pattern>
   </servlet-mapping>
+  <listener>
+    <listener-class>yt.InitListener</listener-class>
+  </listener>
   <servlet>
     <description></description>
     <display-name>HomeServlet</display-name>
